deployment/kubernetes/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: gm-sterling-middleware
  namespace: ${NAMESPACE}
  labels:
    lp_service: gm-sterling-middleware
    lp_system: gm-sterling-middleware
    lp_tier: app
    Name: gmstmdwe
spec:
  replicas: ${REPLICAS}
  strategy:
    rollingUpdate:
      # specifies the maximum number of Pods that can be created above the desired number of Pods during the rolling update process
      maxSurge: 1
      # specifies the maximum number of Pods that can be unavailable during the rolling update process
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      lp_service: gm-sterling-middleware
  template:
    metadata:
      labels:
        lp_service: gm-sterling-middleware
        lp_system: gm-sterling-middleware
        lp_tier: app
        lp_service_version: ${VERSION}-${BUILD_NUMBER}
        lp_bb: nodejs
    spec:
      containers:
        - name: gm-sterling-middleware
          resources:
             limits:
               cpu: "1000m"
               memory: "1Gi"
             requests:
               cpu: "100m"
               memory: "128m"
          image: ${IMAGE_NAME}
