deployment/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gm-sterling-middleware
  namespace: ${NAMESPACE}
  labels:
    lp_service: gm-sterling-middleware
    lp_system: gm-sterling-middleware
    lp_tier: app
    Name: gmstmdwe
spec:
  type: NodePort
  ports:
    - port: 3001
      targetPort: 3001
      protocol: TCP
      name: web-service
  selector:
    lp_service: gm-sterling-middleware
